--- a/src/css/index.css
+++ b/src/css/index.css
@@ -40,9 +40,25 @@ a:hover {
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 2.2rem;
   font-weight: 500;
   font-style: italic;
-  margin-top: 50px;
+  margin-top: 30px;
   text-align: center;
+  line-height: 2rem;
+}
+
+.home-background {
+  background: url('../../public/images/home_image.jpeg');
+  height: 800px;
+}
+
+.nav-item {
+  cursor: pointer;
+}
+
+.home-title {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
